olga commit ya pak boleh?

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navbar-fixed-top">
             <!--left navbar-->
             <div>
-                <p>ПЕРВЫЙ ЖИВОЙ КОЛЛАГЕН</p> 
+                <p>fuckkkkkkkkkkkkkkmeeeeeeeeeee</p> 
             </div>
             <!--center navbar-->
             <div> 
